# icicle

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml  clippy.yml  release.yml
src/: input.rs  main.rs  types.rs
src/gui/: mod.rs
src/gui/widgets/: button.rs  mod.rs  number_input.rs  radio.rs  selection_list.rs  tabs.rs  text_input.rs
src/input/: mod.rs
