[package]
name = "icicle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10.0"
iced_aw = { git = "https://github.com/Redhawk18/iced_aw.git", rev = "69f3096", default-features = false, features = ["number_input", "selection_list"] }
inputbot = "0.5.1"
